--- a/Logik/TK68EC020/TK68EC020.ucf
+++ b/Logik/TK68EC020/TK68EC020.ucf
@@ -59,9 +59,10 @@ NET "IDE_A<1>"			LOC = "P129";
 NET "IDE_A<2>"			LOC = "P130"; 
 NET "IDE_CS<0>"			LOC = "P133"; 
 NET "IDE_CS<1>"			LOC = "P132"; 
-NET "IDE_R"					LOC = "P124"; 
+NET "IDE_BUF_DIR"					LOC = "P124"; 
 NET "IDE_RESET"			LOC = "P126"; 
-NET "IDE_W"					LOC = "P128"; 
+NET "IDE_R"					LOC = "P128"; 
+NET "IDE_W"					LOC = "P110"; 
 NET "IDE_WAIT" 			LOC = "P125"; 
 NET "ROM_B<0>"			LOC = "P121"; 
 NET "ROM_B<1>"			LOC = "P120"; 
