fixed parts but mem cfg not bug free

--- a/Logik/TK68EC020/TK68EC020.ucf
+++ b/Logik/TK68EC020/TK68EC020.ucf
@@ -106,8 +106,8 @@ NET "VMA" 					LOC = "P49";
 NET "VPA" 					LOC = "P44"; 
 NET "RW_020"				LOC = "P40"; 
 NET "RESET"					LOC = "P143"; 
-NET "MEM_CFG1"			LOC = "P115"; 
-NET "MEM_CFG2"			LOC = "P113"; 
+NET "MEM_CFG<0>"			LOC = "P115"; 
+NET "MEM_CFG<1>"			LOC = "P113"; 
 NET "AUTO_BOOT"			LOC = "P116"; 
 NET "FC<0>"			LOC = "P112"; 
 NET "FC<1>"			LOC = "P111"; 
