DMA BR/BGACK improved E-Clock synced to pos edge but DMA-Cycle does not finish!

--- a/Logik/TK68EC020/TK68EC020.ucf
+++ b/Logik/TK68EC020/TK68EC020.ucf
@@ -114,4 +114,7 @@ NET "FC<1>"			LOC = "P111";
 NET "BERR"			LOC = "P107"; 
 NET "AMIGA_BUS_DATA_DIR"		LOC = "P61"; 
 NET "AMIGA_BUS_ENABLE_LOW"	LOC = "P60"; 
-NET "AMIGA_BUS_ENABLE_HIGH"	LOC = "P59"; 
+NET "AMIGA_BUS_ENABLE_HIGH"	LOC = "P59";
+#Created by Constraints Editor (xc95288xl-tq144-10) - 2018/01/01
+NET "CLK_PLL" TNM_NET = CLK_PLL;
+TIMESPEC TS_CLK_PLL = PERIOD "CLK_PLL" 112 MHz HIGH 50%;
